Added 'sets' for users when adding a workout. Made other small adjustments. Began working on mutation for deleting workouts. Added to queries

--- a/client/src/components/CreateWorkout/assets/CreateWorkout.css
+++ b/client/src/components/CreateWorkout/assets/CreateWorkout.css
@@ -1,13 +1,17 @@
-.exercise-select {
+/* .exercise-select {
   width: 50%;
-}
+} */
 
 .userWeight,
 .userReps,
 .userNotes,
 .userMiles,
 .userPace,
-.userSets {
+.userSets,
+.exercise-select {
+  width: 100%;
   background-color: white;
+  margin: 0.1%;
+  margin-top: 5%;
 }
 
