Added local storage to workouts. Now when user logs a workout, it will save in local storage as well as show on the page after each workout/set added. This will help show users what workout they are currently on as well as what workout they did last. Once the user clicks on complete workout, it will clear the local history but the workout will always be added to the database

--- a/client/src/components/NavBar/assets/navBar.css
+++ b/client/src/components/NavBar/assets/navBar.css
@@ -3,26 +3,33 @@ header {
 }
 
 .header {
-  background-color: #44074d; /* Change background color to dark */
-  color: #9a29b0; /* Change text color to white */
+  background-color: #44074d;
+  /* Change background color to dark */
+  color: #9a29b0;
+  /* Change text color to white */
 }
 
 .header .MuiTypography-root {
-  color: rgb(255, 114, 6); /* Ensure the typography is white */
+  color: rgb(255, 114, 6);
+  /* Ensure the typography is white */
 }
 
 .header .MuiButton-root {
-  margin: 0 10px; /* Add margin to buttons */
+  margin: 0 10px;
+  /* Add margin to buttons */
 }
 
 .header .MuiButton-root .MuiTypography-root {
-  color: rgb(213, 117, 66); /* Ensure the button text is white */
+  color: rgb(213, 117, 66);
+  /* Ensure the button text is white */
 }
 
 .header .MuiIconButton-root {
-  color: rgb(197, 99, 13); /* Ensure the icon buttons are white */
+  color: rgb(197, 99, 13);
+  /* Ensure the icon buttons are white */
 }
 
 .header .MuiAvatar-root {
-  border: 2px solid rgb(172, 78, 27); /* Add a border to the avatar */
+  border: 2px solid rgb(172, 78, 27);
+  /* Add a border to the avatar */
 }
