--- a/client/src/components/CreateWorkout/assets/CreateWorkout.css
+++ b/client/src/components/CreateWorkout/assets/CreateWorkout.css
@@ -15,3 +15,42 @@
   margin-top: 5%;
 }
 
+.workoutTextDiv {
+  padding: 20px;
+  margin: 20px auto;
+  max-width: 600px;
+  background-color: #21122d;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  font-family: 'Arial', sans-serif;
+}
+
+.workoutTextDiv p {
+  margin: 10px 0;
+  font-weight: bold;
+  color: #333;
+  font-size: 1.1rem;
+}
+
+.workoutTextDiv p::after {
+  content: ": ";
+  font-weight: normal;
+}
+
+.workoutTextDiv .workoutExerciseText {
+  color: #4caf50;
+}
+
+.workoutTextDiv .workoutSetText,
+.workoutTextDiv .workoutWightText,
+.workoutTextDiv .workoutRepText,
+.workoutTextDiv .workoutMilesText,
+.workoutTextDiv .workoutPaceText,
+.workoutTextDiv .workoutNotesText {
+  color: #00796b;
+}
+
+.workoutTextDiv span {
+  color: #555;
+  font-weight: normal;
+}
