Fixed issue where errors displayed if user was not signed in. Fixed issue were refetch was not working on comment post. Fixed issue were comment dates were not displaying correctly. Added confirmations for adding and deleting comments. Deleted a lot of undeeded code. Added new group to execerises- so now user will have workouts grouped by date and then within the date the user will have access to each workout where the workout will display all their sets for the particular exercise. Added css to make the UI more understable

--- a/client/src/components/CreateWorkout/assets/CreateWorkout.css
+++ b/client/src/components/CreateWorkout/assets/CreateWorkout.css
@@ -9,11 +9,13 @@
 .userPace,
 .userSets,
 .exercise-select {
+  border-radius: 10px;
   width: 100%;
-  background-color: white;
-  margin: 0.1%;
+  background-color: rgba(0, 0, 0, 0.221);
+  margin: 0.7% !important;
   margin-top: 5%;
 }
+
 
 .workoutTextDiv {
   padding: 20px;
@@ -28,7 +30,7 @@
 .workoutTextDiv p {
   margin: 10px 0;
   font-weight: bold;
-  color: #333;
+  color: white;
   font-size: 1.1rem;
 }
 
@@ -53,4 +55,13 @@
 .workoutTextDiv span {
   color: #555;
   font-weight: normal;
+}
+
+.signinOrSignupDiv {
+  text-align: center;
+}
+
+.signinOrSignupDiv p {
+  font: white;
+  font-size: 30px;
 }
