Fixed issue where delete option would show for all users even if they werent their comment. Now delete option only shows for users that left it. Made component for users comments and removed it from post card. Chnaged queries for posts and comments to show profile info. Chnanged CSS elements and some UI changes

--- a/client/src/components/CreateWorkout/assets/CreateWorkout.css
+++ b/client/src/components/CreateWorkout/assets/CreateWorkout.css
@@ -57,11 +57,16 @@
   font-weight: normal;
 }
 
-.signinOrSignupDiv {
-  text-align: center;
-}
+
 
 .signinOrSignupDiv p {
+  text-align: center;
   font: white;
   font-size: 30px;
+}
+
+.loginBtn,
+.signupBtn {
+  color: purple !important;
+  background-color: orange !important;
 }
