Created the ability to edit a workout as well as show a form for the user to edit and save their changes, additionally a cancel option. The user will have all of the same options as if they are creating a new workout. The workout grid will now contain the workouts AND the editing feature. Will not make the editing a seperate component (this is for ease of use and future coding). Added some CSS to have it not too crazy. Changed queries to place a users name under posts, as well as fix resolvers as there was a typo in the update workout, and lastly the front end mutation for updating a workout had a typo.

--- a/client/src/components/CreateWorkout/assets/CreateWorkout.css
+++ b/client/src/components/CreateWorkout/assets/CreateWorkout.css
@@ -11,11 +11,14 @@
 .exercise-select {
   border-radius: 10px;
   width: 100%;
-  background-color: rgba(0, 0, 0, 0.221);
+  background-color: #21122d !important;
   margin: 0.7% !important;
   margin-top: 5%;
 }
 
+.exercise-select {
+  font-size: 30px !important;
+}
 
 .workoutTextDiv {
   padding: 20px;
@@ -69,4 +72,12 @@
 .signupBtn {
   color: purple !important;
   background-color: orange !important;
+}
+
+.logWorkoutBtn,
+.completeSetBtn,
+.viewWorkoutBtn {
+  background-color: #00796b !important;
+  color: white !important;
+  margin: 2% !important;
 }
