Created a new component that passes through the log in/sign up option if user is not logged in by using Auth. This will keep from rendering the data for QUERY me which was being called rendered too many times an caused delay in loading or errors. Fixed UI for workout grid and added elements. Replaced navbar with Links from react to reduce code. Added UI for navbar. Added a About me page which will be added in due time. Fixed some login/signup page elements

--- a/client/src/components/CreateWorkout/assets/CreateWorkout.css
+++ b/client/src/components/CreateWorkout/assets/CreateWorkout.css
@@ -1,6 +1,6 @@
 
 
-
+/* 
 .signinOrSignupDiv p {
   text-align: center;
   font: white;
@@ -11,7 +11,7 @@
 .signupBtn {
   color: rgb(255, 255, 255) !important;
   background-color: #f9c000 !important;
-}
+} */
 
 .addSetBtn, .saveSetBtn, .logWorkoutBtn {
   background-color: #f9c000;
