--- a/client/src/components/WorkoutGird/assets/workoutGrid.css
+++ b/client/src/components/WorkoutGird/assets/workoutGrid.css
@@ -1,4 +1,4 @@
-.title {
+/* .title {
   color: white;
 }
 
@@ -76,4 +76,4 @@
 .main, .btn-secondary:hover {
   background-color: #444 !important;
   border-color: #444 !important;
-}
+} */
