--- a/client/src/components/CreateWorkout/createWorkout.css
+++ b/client/src/components/CreateWorkout/createWorkout.css
@@ -1,4 +1,4 @@
-
+/* 
 .addSetBtn, .saveSetBtn, .logWorkoutBtn {
   background-color: #f9c000;
   color: black;
@@ -20,4 +20,4 @@
 .removeSetBtn:hover {
   background-color: #f900002d;
   border: none;
-}
+} */
