--- a/client/src/components/CreatePost/assets/createPost.css
+++ b/client/src/components/CreatePost/assets/createPost.css
@@ -7,11 +7,12 @@
 }
 
 .userPost {
-  height: 400px;
-  width: 100%;
+  /* height: 50px; */
+  /* width: 100%; */
+  white-space: pre-wrap;
   background-color: rgba(255, 255, 255, 0.987);
-  border-radius: 10px 10px 10px 10px;
-  white-space:inherit;
+  /* border-radius: 10px 10px 10px 10px; */
+  white-space:inherit
 }
 
 .userTitle {
