--- a/client/src/components/PostCard/assets/postCard.css
+++ b/client/src/components/PostCard/assets/postCard.css
@@ -1,3 +1,21 @@
 .postCardIconDiv {
   display: flex;
 }
+
+.postIcons {
+  display: flex;
+  justify-content: space-around
+}
+
+.faveBtn, .commentBtn, .shareBtn, .reactBtn {
+  background-color: rgba(0, 0, 0, 0.087);
+  border: none;
+  color: #777;
+  font-size: 10px;
+  margin: 1%;
+}
+
+
+.faveBtn:hover, .commentBtn:hover, .shareBtn:hover, .reactBtn:hover {
+  background-color: #777;
+} 
