--- a/client/src/components/AccessPrompt/assets/accessPrompt.css
+++ b/client/src/components/AccessPrompt/assets/accessPrompt.css
@@ -1,5 +1,5 @@
 .signInOrSignupDiv {
-  margin: 6%;
+  margin: 2%;
   text-align: center;
   font-size: 19px;
   color: #ffffff;
@@ -12,5 +12,5 @@
 }
 
 .loginBtn:hover, .signUpBtn:hover  {
-  background-color: #f9bf007b;
+  background-color: #f9bf007b !important;
 }
