Features: Users can not see their total weight for the activity. Removed set, weight and rep and added placeholders

--- a/client/src/pages/Account/assets/account.css
+++ b/client/src/pages/Account/assets/account.css
@@ -21,12 +21,23 @@
 
 .userEmailDiv, 
 .usernameDiv, 
-.userLocationDiv, 
 .userSocialHandleDiv, 
 .userBioDiv, 
 .userPwdDiv, 
 .userConfirmPwdDiv {
   margin: 1%;
+  width: 250% !important;
+}
+
+.applyBtn, .changePasswordBtn, .doneBtn {
+   background-color: #f9c000 !important;
+  color: white;
+  border: none
+}
+
+.userLocationDiv {
+  margin: 1%;
+  width: 65%;
 }
 
 .dateFormat {
