--- a/client/src/components/CreatePost/assets/createPost.css
+++ b/client/src/components/CreatePost/assets/createPost.css
@@ -12,7 +12,7 @@
   white-space: pre-wrap;
   background-color: rgba(255, 255, 255, 0.987);
   /* border-radius: 10px 10px 10px 10px; */
-  white-space:inherit
+  /* white-space:inherit */
 }
 
 .userTitle {
