--- a/client/src/components/NavBar/assets/navBar.css
+++ b/client/src/components/NavBar/assets/navBar.css
@@ -1,20 +1,90 @@
-.navBarLinkCommunity, 
-.navBarLinkCreatePost, 
-.navBarLinkLogWorkout, 
-.navBarLinkAbout {
-  color: #f9bf00c5;
-  text-decoration: none;
-  padding: 5px;
+.sidebar-container {
+  width: 240px;
+  height: 100vh;
+  background-color: #3a3938;
+  color: #f9c000;
+  position: fixed;
+  right: -250px; /* Hidden by default */
+  top: 0;
+  transition: right 0.6s ease;
+  z-index: 1;
+  /* border: 0.5px solid #f9bf0030; */
+  border-radius: 10px;
+  font-family: 'Times New Roman', Times, serif;
 }
 
+.sidebar-container.open {
+  right: 0; 
+  z-index: 2;
+  color: #f9c000;
+}
 
-.navBarLinkCommunity:hover, 
-.navBarLinkCreatePost:hover, 
-.navBarLinkLogWorkout:hover,
-.navBarLinkAbout:hover {
-  color: #b2b2b288;
+.sidebar-container.closed {
+  right: -250px; 
+  z-index: 2;
+  color: white;
+}
+
+.sidebar-username {
+  font-weight: 600;
+  border: 1px solid #f9c000;
+  border-radius: 10px;
+}
+
+.toggle-button {
+  position: fixed;
+  top: 1px;
+  right: 10px;
+  background: none;
+  border: none;
+  color: #343a40;
+  cursor: pointer;
+  z-index: 3;
+  color: #f9c000;
+}
+
+.sidebar-header {
+  text-align: center;
+  margin-bottom: 20px;
+  z-index: 3;
+  color: #f9c000;
+}
+
+.sidebar-nav {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+.sidebar-nav a {
+  color: white;
   text-decoration: none;
-  padding: 5px;
-  font-size: 17px;
-  transition: 0.3s;
+  margin-bottom: 15px;
+  font-size: 16px;
+}
+
+.sidebar-nav a:hover {
+  color: #f9bf00;
+}
+
+.sidebar-user {
+  text-align: center;
+}
+
+.sidebar-button {
+  background-color: #f9bf00c5;
+  color: white;
+  padding: 10px;
+  margin-bottom: 10px;
+  width: 100%;
+  cursor: pointer;
+}
+
+.sidebar-button:hover {
+  background-color: #e0a800;
+}
+
+.logoutBtn {
+  background-color: #dc3545;
 }
