--- a/client/src/pages/Account/assets/account.css
+++ b/client/src/pages/Account/assets/account.css
@@ -62,12 +62,11 @@
 
 
 .user-info-container {
-
   padding: 1rem;
   /* background-color: #f8f9fa; */
-  border-radius: 8px;
-  border: 1px solid black;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  /* border-radius: 8px;
+  border: 1px solid black; */
+  /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); */
 }
 
 .user-info-item, .form-label {
