--- a/client/src/components/DeleteComment/assets/deleteComment.css
+++ b/client/src/components/DeleteComment/assets/deleteComment.css
@@ -2,13 +2,13 @@
 .closeConfirmDeleteBtn {
   padding: 2px !important;
   font-size: 13px !important;
-  color: purple !important;
-  background-color: orange !important;
+  color: rgb(247, 247, 247) !important;
+  background-color: #f9c000 !important;
 }
 
 .deleteCommentBtn:hover,
 .closeConfirmDeleteBtn:hover {
-  background-color: rgba(255, 166, 0, 0.5) !important;
+  background-color: #f9bf008b(255, 166, 0, 0.5) !important;
 }
 
 .closeConfirmDeleteBtn {
@@ -23,5 +23,5 @@
   color: white !important;
   padding: 2px !important;
   font-size: 13px !important;
-  background-color: red !important;
+  background-color: rgba(255, 0, 0, 0.588) !important;
 }
