Added css to reply btns as well as an error handler to the submitting empty reply comments

--- a/client/src/components/UserReplyComment/assets/userReplyComment.css
+++ b/client/src/components/UserReplyComment/assets/userReplyComment.css
@@ -3,3 +3,16 @@
   font-size: 15px;
   margin: 2%;
 }
+
+.commentReplyBtn {
+  padding: 2px !important;
+  font-size: 13px !important;
+  color: rgb(247, 247, 247) !important;
+  background-color: #816402a5 !important;
+  border: none;
+  margin-left: 90%;
+}
+
+.commentReplyBtn:hover {
+  background-color: #f9bf0050(255, 166, 0, 0.5) !important;
+}
