--- a/client/src/components/DeleteReplyComment/assets/deleteReplyComment.css
+++ b/client/src/components/DeleteReplyComment/assets/deleteReplyComment.css
@@ -1,10 +1,10 @@
 .deleteCommentReplyBtn {
   padding: 2px !important;
   font-size: 13px !important;
-  color: rgb(247, 247, 247) !important;
-  background-color: #816402a5 !important;
+  color: rgb(86, 32, 32) !important;
+  /* background-color: #816402a5 !important; */
   border: none;
-  margin-left: 80%;
+  margin-left: 90%;
 }
 
 .deleteCommentReplyBtn:hover {
